# conf-parser

./: .gitignore  README.md  pyproject.toml
conf_parser/: __init__.py
