[tool.poetry]
name = "conf-parser"
version = "0.1.0"
description = ""
authors = ["Aqdas Ahmad Khan <aqdasak@gmail.com>"]
readme = "README.md"
packages = [{include = "conf_parser"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
